<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OTPvault</string>
    <string name="invalid_token">The token specified was invalid!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="no_keys">No OTP keys installed.</string>
    <string name="add_token">Add Token</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="manually_add">Manually Add</string>
    <string name="interval">Interval</string>
    <string name="counter">Counter</string>
    <string name="secret">Secret</string>
    <string name="type">Type</string>
    <string name="algorithm">Algorithm</string>
    <string name="digits">Digits</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="import_text">Import</string>
    <string name="test_passcode">Test passcode</string>
    <string name="code_copied">Code copied to clipboard.</string>
    <string name="settings">Settings</string>

    <string name="about_otpvault">About OTPvault</string>
    <string name="about_version">OTPvault Version %1$s (%2$d)</string>
    <string name="about_license">OTPvault is licensed under %1$s.</string>
    <string name="about_website">For more information, see our repo at %s.</string>
    <string name="about_website2">https://github.com/datnguyenquy94/OTPvault</string>
    <string name="about_icons">Some icons used by this application are reproduced from work created and shared by the Android Open Source Project and used according to terms described in the Creative Commons 2.5 Attribution License.</string>

    <string name="about_freeotp">OTPvault is a fork of FreeOTP, licensed under APACHE 2.0 by Red Hat, Inc. %s.</string>
    <string name="link_freeotp_website">&lt;a href=&quot;http://freeotp.github.io&quot;&gt;website&lt;/a&gt;</string>
    <string name="link_website">&lt;a href=&quot;https://github.com/datnguyenquy94/OTPvault&quot;&gt;github&lt;/a&gt;</string>
    <string name="link_apache2">&lt;a href=&quot;http://www.apache.org/licenses/LICENSE-2.0.html&quot;&gt;Apache 2.0&lt;/a&gt;</string>

    <string name="error_camera_open">Error while opening camera!</string>
    <string name="error_permission_camera_open">No permission to open the camera</string>
    <string name="error_image_open">Error while opening image!</string>

    <string name="delete_summary">This is your last chance: if you delete this token, it will be gone forever. It will not be disabled on the server.</string>
    <string name="delete_question">Delete this token?</string>

    <string-array name="algorithms">
        <!--<item>MD5</item> MD5 Only generate 128bit hash.-->
        <item>SHA1</item>
        <item>SHA256</item>
        <item>SHA512</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings -->
    <string name="appearance_header">Appearance</string>
    <string name="backup_header">Backup</string>
    <string name="security_header">Security</string>

    <string name="theme">Theme</string>
    <string name="tap_to_show_code">Tap to show code</string>
    <string name="tap_to_show_code_summary">Hide OTP\'s code by default, only show when tap on it.</string>

    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="tutorial_welcome_message">Welcome to OTPvault, OTPvault provider a safe way to store and protect your 2FA data. We going to guide you through the initial setup. Click \'Next\' to move to the next step.</string>
    <string name="tutorial_message_permissions_required">In order for backup and import features work properly, permission to READ/WRITE external storage is required.</string>
    <string name="tutorial_message_theme_setup">OTPvault support more multi-themes. Select one you would like to use and click \'Next\'. You can change theme later in Settings.</string>
    <string name="tutorial_message_password_setup">To keep your data safe. OTPvault going to use your password to encrypt your data. The password\'s length minimum is 8 characters. Choose wisely you will not able to recover your data without it. You can change your password later in Setting.</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="password_label">Password:</string>
    <string name="repeat_your_password_label">Repeat your password:</string>
    <string name="done_upcase">DONE</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>
