<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/welcome"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2">
            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/ic_key"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5">
            <RelativeLayout
                android:id="@+id/welcome01"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/description01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/tutorial_welcome_message"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/welcome02"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/description04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/tutorial_message_permissions_required"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/welcome03"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/description03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/tutorial_message_theme_setup"/>
                <LinearLayout
                    android:layout_below="@id/description03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/light_theme_button"
                        android:textSize="24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/theme_light"
                        android:background="@color/lightColorPrimaryDark"
                        android:textColor="@color/lightColorPrimary" />
                    <Button
                        android:id="@+id/dark_theme_button"
                        android:textSize="24dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/theme_dark"
                        android:background="@color/darkColorPrimaryDark"
                        android:textColor="@color/darkColorPrimary"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/welcome04"
                android:visibility="visible"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/description02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/tutorial_message_password_setup"/>
                <LinearLayout
                    android:layout_below="@id/description02"
                    android:id="@+id/welcome_create_password_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15px"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_label"/>
                    <EditText
                        android:id="@+id/passwordText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:inputType="textPassword"
                        android:focusedByDefault="true"
                        android:singleLine="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_your_password_label"/>
                    <EditText
                        android:id="@+id/passwordTextRepeat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:inputType="textPassword"
                        android:focusedByDefault="true"
                        android:singleLine="true" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/welcome05"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/done_logo"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/done"/>
                    <TextView
                        android:id="@+id/description05"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textAlignment="center"
                        android:text="@string/done_upcase"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <Button
                    android:id="@+id/previous_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:text="@string/previous"/>
                <Button
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:text="@string/next"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>