<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/appearance_header">

        <!--<EditTextPreference-->
            <!--app:key="theme"-->
            <!--app:title="@string/theme"-->
            <!--app:useSimpleSummaryProvider="true" />-->

        <ListPreference
            app:defaultValue="Light"
            app:entries="@array/themes"
            app:entryValues="@array/themes"
            app:key="theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="splitTokenCode"
            app:defaultValue="true"
            app:title="Split TokenCode into two parts"
            app:summary="Add a whitespace in the middle of TokenCode."/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/backup_header">

        <Preference
            app:key="importNow"
            app:title="Import"
            app:summary="Import tokens from a backup."/>

        <Preference
            app:key="backupNow"
            app:title="Backup"
            app:summary="Backup all tokens."/>

        <SwitchPreferenceCompat
            app:key="backupFileWithTimeStamp"
            app:defaultValue="false"
            app:title="Append TimeStamp to file"
            app:summary="Append a timestamp to the end of every backup file."/>

        <EditTextPreference
            app:key="backupFileName"
            app:defaultValue="backup_otp"
            app:title="Backup filename"
            app:summary="The backup output filename"/>

        <Preference
            app:key="backupLocation"
            app:defaultValue=""
            app:title="Backup location"
            app:summary="The location which the backups will be saved."/>

        <SwitchPreferenceCompat
            app:key="allowBackupByBroastcastIntent"
            app:defaultValue="true"
            app:title="Allow backup by broastcast from thirdparty apps."
            app:summary="Automatic backup tokens when receive broadcast intent from thirdparty apps (Example: Tasker)."/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security_header">

        <Preference
            app:key="changePassword"
            app:title="Change password"
            app:summary="The app password also is the encrypt key for all your token data."/>

        <SwitchPreferenceCompat
            app:key="enableLockTimeout"
            app:defaultValue="true"
            app:title="Enable lock timeout"
            app:summary="Auto lock the app if user idle in (x) seconds."/>

        <SeekBarPreference
            app:dependency="enableLockTimeout"
            app:key="lockTimeOut"
            app:defaultValue="60"
            app:min="30"
            app:max="240"
            app:title="Lock time out"/>

        <SwitchPreferenceCompat
            app:key="lockOnScreenOff"
            app:title="Lock app on screen off."
            app:summary="Lock app if the screen go off." />

        <SwitchPreferenceCompat
            app:key="lockOnBackground"
            app:title="Lock app on background."
            app:summary="Lock app if it gone to background mode." />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
